--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,16 +6,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
+          repository: lhbelfanti/goxcrap
           fetch-depth: 2
-      - uses: actions/setup-go@v2
+      - name: Setup go
+        uses: actions/setup-go@v5
         with:
           go-version: '1.20.4'
       - name: Run coverage
         run: go test ./... -coverpkg=./... -count=1 -race -timeout=30m -shuffle=on -coverprofile=coverage.out -covermode=atomic
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v4.0.1
+        uses: codecov/codecov-action@v4
         env:
           token: ${{ secrets.CODECOV_TOKEN }}
           slug: lhbelfanti/goxcrap
