Changed path of ignored files

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,6 +1,6 @@
 ignore:
   - "**/mocks.go"
   - "**/*_mock.go"
-  - "cmd/main.go"
+  - "cmd/api/main.go"
   - "internal/debug/*"
   - "internal/chromedriver/driver.go"
