🛠️  Refactorized the way the drivers are initialized

--- a/codecov.yml
+++ b/codecov.yml
@@ -3,4 +3,4 @@ ignore:
   - "**/*_mock.go"
   - "cmd/api/main.go"
   - "internal/debug/*"
-  - "internal/chromedriver/driver.go"
+  - "internal/driver/*"
