⚙️ Improved dependency inyections to be able to create a web driver per each request

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,6 +1,7 @@
 ignore:
   - "**/mocks.go"
   - "**/*_mock.go"
+  - "**/new.go"
   - "cmd/api/main.go"
   - "internal/debug/*"
   - "internal/driver/*"
