⚡️ Implemented message broker to equeue search criteria and process them in parallel

--- a/codecov.yml
+++ b/codecov.yml
@@ -3,5 +3,6 @@ ignore:
   - "**/*_mock.go"
   - "**/new.go"
   - "cmd/api/main.go"
+  - "internal/broker/"
   - "internal/debug/*"
   - "internal/driver/*"
