--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,15 @@ services:
       USERNAME: ${USERNAME}
       DRIVER_PATH: ${DRIVER_PATH}
       BROWSER_PATH: ${BROWSER_PATH}
+      RABBITMQ_USER: ${RABBITMQ_USER}
+      RABBITMQ_PASS: ${RABBITMQ_PASS}
     ports:
       - 8080:8091
     restart: on-failure
     volumes:
       - .:/app
+    depends_on:
+      - rabbitmq
     networks:
       - network
     healthcheck:
@@ -26,6 +30,23 @@ services:
         limits:
           cpus: '2.0'
           memory: 2G
+
+  rabbitmq:
+    image: "rabbitmq:3-management-alpine"
+    container_name: rabbitmq
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    environment:
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASS}
+    healthcheck:
+      test: [ "CMD-SHELL", "rabbitmq-diagnostics -q ping" ]
+      interval: 10s
+      timeout: 10s
+      retries: 5
+    networks:
+      - network
 
 volumes:
   database:
