🛠️  Refactor: Changed the GoXCrapWebDriver interface concept and the way its implementations are instantiated

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,8 +1,6 @@
 ignore:
   - "**/mocks.go"
-  - "**/*_mock.go"
-  - "**/new.go"
   - "cmd/api/main.go"
   - "internal/broker/"
   - "internal/debug/*"
-  - "internal/driver/*"
+  - "internal/webdriver/*"
