--- a/codecov.yml
+++ b/codecov.yml
@@ -1,6 +1,6 @@
 ignore:
   - "**/mocks.go"
   - "cmd/api/main.go"
-  - "internal/broker/"
+  - "internal/broker/*"
   - "internal/debug/*"
   - "internal/webdriver/*"
