📝 Added ports documentation and .env.example file

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,20 @@
+# App settings
+APP_EXPOSED_PORT=8080 # Host port
+APP_INTERNAL_PORT=3000 # Container port
+
+# Scrapper settings
 EMAIL=<Twitter account email>
 PASSWORD=<Twitter username>
 USERNAME=<Twitter password>
+
+# Selenium Chrome driver paths
 DRIVER_PATH=/usr/bin/chromedriver
 BROWSER_PATH=/usr/bin/chromium
+
+# RabbitMQ settings
 RABBITMQ_USER=goxcrap_user
 RABBITMQ_PASS=goxcrap_password
+RABBITMQ_PORT=5672
+
+# External APIs URLs
 SAVE_TWEETS_API_URL=http://localhost:8080
