⚙️ Splitted main logic in two files, one for each run mode: dockerized and local

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,6 +1,8 @@
 ignore:
   - "**/mocks.go"
   - "cmd/api/main.go"
+  - "cmd/api/local.go"
+  - "cmd/api/dockerized.go"
   - "internal/broker/*"
   - "internal/debug/*"
   - "internal/webdriver/*"
