⚙️ Parameterized ports and other variables

--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,9 @@ APP_INTERNAL_PORT=3000 # Container port
 
 # Scrapper settings
 EMAIL=<Twitter account email>
-PASSWORD=<Twitter username>
 USERNAME=<Twitter password>
+PASSWORD=<Twitter username>
+BROKER_CONCURRENT_MESSAGES=2
 
 # Selenium Chrome driver paths
 DRIVER_PATH=/usr/bin/chromedriver
