--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,23 +4,26 @@ services:
       context: .
     container_name: goxcrap
     environment:
+      APP_API_PORT: ${APP_INTERNAL_PORT:-3001}
       EMAIL: ${EMAIL}
       PASSWORD: ${PASSWORD}
       USERNAME: ${USERNAME}
       DRIVER_PATH: ${DRIVER_PATH}
       BROWSER_PATH: ${BROWSER_PATH}
+      BROKER_CONCURRENT_MESSAGES: ${BROKER_CONCURRENT_MESSAGES}
       RABBITMQ_USER: ${RABBITMQ_USER}
       RABBITMQ_PASS: ${RABBITMQ_PASS}
+      RABBITMQ_PORT: ${RABBITMQ_PORT:-5672}
     command: ["/goxcrap", "--prod"]
     ports:
-      - 8080:8091
+      - "${APP_EXPOSED_PORT}:${APP_INTERNAL_PORT}"
     restart: on-failure
     volumes:
       - .:/app
     networks:
       - app
     healthcheck:
-      test: [ "CMD-SHELL", "sh -c 'curl -sSf http://localhost:8091/ping/v1 || exit 1'" ]
+      test: [ "CMD-SHELL", "sh -c 'curl -sSf http://localhost:${APP_INTERNAL_PORT}/ping/v1 || exit 1'" ]
       interval: 5s
       timeout: 10s
       retries: 5
@@ -38,7 +41,7 @@ services:
     container_name: rabbitmq
     hostname: 'goxcrap'
     ports:
-      - 5672:5672
+      - "5672:${RABBITMQ_PORT:-5672}"
       - 15672:15672
     environment:
       RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER}
