🧑‍💻 Renamed environment variables

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 # App settings
-APP_EXPOSED_PORT=8080 # Host port
-APP_INTERNAL_PORT=3000 # Container port
+SCRAPPER_EXPOSED_PORT=8080 # Host port
+SCRAPPER_INTERNAL_PORT=3000 # Container port
 
 # Scrapper settings
-EMAIL=<Twitter account email>
-USERNAME=<Twitter password>
-PASSWORD=<Twitter username>
+SCRAPPER_EMAIL=<Twitter account email>
+SCRAPPER_USERNAME=<Twitter password>
+SCRAPPER_PASSWORD=<Twitter username>
 BROKER_CONCURRENT_MESSAGES=2
 
 # Selenium Chrome driver paths
