🧑‍💻 Renamed environment variables. Getting EXPOSE port (in Dockerfile) from the .env file

--- a/compose.yml
+++ b/compose.yml
@@ -11,8 +11,8 @@ services:
       EMAIL: ${SCRAPPER_EMAIL}
       PASSWORD: ${SCRAPPER_PASSWORD}
       USERNAME: ${SCRAPPER_USERNAME}
-      DRIVER_PATH: ${DRIVER_PATH}
-      BROWSER_PATH: ${BROWSER_PATH}
+      DRIVER_PATH: ${SELENIUM_DRIVER_PATH}
+      BROWSER_PATH: ${SELENIUM_BROWSER_PATH}
       BROKER_CONCURRENT_MESSAGES: ${BROKER_CONCURRENT_MESSAGES}
       RABBITMQ_USER: ${RABBITMQ_USER}
       RABBITMQ_PASS: ${RABBITMQ_PASS}
