--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,11 @@ SCRAPPER_EMAIL=<Twitter account email>
 SCRAPPER_USERNAME=<Twitter password>
 SCRAPPER_PASSWORD=<Twitter username>
 BROKER_CONCURRENT_MESSAGES=2
+SCRAPPER_LOGIN_PAGE_TIMEOUT=10
+SCRAPPER_LOGIN_ELEMENTS_TIMEOUT=10
+SCRAPPER_LOGIN_PASSWORD_TIMEOUT=5
+SCRAPPER_SEARCH_PAGE_TIMEOUT=10
+SCRAPPER_ARTICLES_TIMEOUT=10
 
 # Selenium Chrome driver paths
 SELENIUM_DRIVER_PATH=/usr/bin/chromedriver
