--- a/compose.yml
+++ b/compose.yml
@@ -14,6 +14,11 @@ services:
       DRIVER_PATH: ${SELENIUM_DRIVER_PATH}
       BROWSER_PATH: ${SELENIUM_BROWSER_PATH}
       BROKER_CONCURRENT_MESSAGES: ${BROKER_CONCURRENT_MESSAGES}
+      LOGIN_PAGE_TIMEOUT: ${SCRAPPER_LOGIN_PAGE_TIMEOUT}
+      LOGIN_ELEMENTS_TIMEOUT: ${SCRAPPER_LOGIN_ELEMENTS_TIMEOUT}
+      LOGIN_PASSWORD_TIMEOUT: ${SCRAPPER_LOGIN_PASSWORD_TIMEOUT}
+      SEARCH_PAGE_TIMEOUT: ${SCRAPPER_SEARCH_PAGE_TIMEOUT}
+      ARTICLES_TIMEOUT: ${SCRAPPER_ARTICLES_TIMEOUT}
       RABBITMQ_USER: ${RABBITMQ_USER}
       RABBITMQ_PASS: ${RABBITMQ_PASS}
       RABBITMQ_PORT: ${RABBITMQ_PORT:-5672}
