🧑‍💻 Moved wait time after login to an environment variable

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ BROKER_CONCURRENT_MESSAGES=2
 SCRAPPER_LOGIN_PAGE_TIMEOUT=10
 SCRAPPER_LOGIN_ELEMENTS_TIMEOUT=10
 SCRAPPER_LOGIN_PASSWORD_TIMEOUT=5
+SCRAPPER_WAIT_TIME_AFTER_LOGIN=10
 SCRAPPER_SEARCH_PAGE_TIMEOUT=10
 SCRAPPER_ARTICLES_TIMEOUT=10
 
