--- a/compose.yml
+++ b/compose.yml
@@ -17,6 +17,7 @@ services:
       LOGIN_PAGE_TIMEOUT: ${SCRAPPER_LOGIN_PAGE_TIMEOUT}
       LOGIN_ELEMENTS_TIMEOUT: ${SCRAPPER_LOGIN_ELEMENTS_TIMEOUT}
       LOGIN_PASSWORD_TIMEOUT: ${SCRAPPER_LOGIN_PASSWORD_TIMEOUT}
+      WAIT_TIME_AFTER_LOGIN: ${SCRAPPER_WAIT_TIME_AFTER_LOGIN}
       SEARCH_PAGE_TIMEOUT: ${SCRAPPER_SEARCH_PAGE_TIMEOUT}
       ARTICLES_TIMEOUT: ${SCRAPPER_ARTICLES_TIMEOUT}
       RABBITMQ_USER: ${RABBITMQ_USER}
