⚡️ Added calls to corpus creator's endpoints: /criteria/%d/executions/v1, /criteria/executions/%d/v1 and /criteria/executions/%d/day/v1

--- a/.env.local.example
+++ b/.env.local.example
@@ -18,4 +18,4 @@ RABBITMQ_PASS=goxcrap_password
 RABBITMQ_PORT=5672
 
 # External APIs URLs
-SAVE_TWEETS_API_URL=http://localhost:4100
+CORPUS_CREATOR_API_URL=http://ahbcc:4000
