⚡️ Adding delay between requests to avoid getting rate limited

--- a/.env.local.example
+++ b/.env.local.example
@@ -8,6 +8,8 @@ LOGIN_PASSWORD_TIMEOUT=5
 WAIT_TIME_AFTER_LOGIN=10
 SEARCH_PAGE_TIMEOUT=10
 ARTICLES_TIMEOUT=10
+RATE_LIMITER_PERIOD=900
+RATE_LIMITER_REQUESTS=50
 
 # External APIs URLs
 CORPUS_CREATOR_API_URL=http://ahbcc:4000
