--- a/.env.dockerized.example
+++ b/.env.dockerized.example
@@ -13,6 +13,8 @@ SCRAPPER_LOGIN_PASSWORD_TIMEOUT=5
 SCRAPPER_WAIT_TIME_AFTER_LOGIN=10
 SCRAPPER_SEARCH_PAGE_TIMEOUT=10
 SCRAPPER_ARTICLES_TIMEOUT=10
+SCRAPPER_RATE_LIMITER_PERIOD=900
+SCRAPPER_RATE_LIMITER_REQUESTS=50
 
 # Selenium Chrome driver paths
 SELENIUM_DRIVER_PATH=/usr/bin/chromedriver
