⚡️ Adding delay between requests to avoid getting rate limited

--- a/compose.yml
+++ b/compose.yml
@@ -20,6 +20,8 @@ services:
       WAIT_TIME_AFTER_LOGIN: ${SCRAPPER_WAIT_TIME_AFTER_LOGIN}
       SEARCH_PAGE_TIMEOUT: ${SCRAPPER_SEARCH_PAGE_TIMEOUT}
       ARTICLES_TIMEOUT: ${SCRAPPER_ARTICLES_TIMEOUT}
+      RATE_LIMITER_PERIOD: ${SCRAPPER_RATE_LIMITER_PERIOD}
+      RATE_LIMITER_REQUESTS: ${SCRAPPER_RATE_LIMITER_REQUESTS}
       RABBITMQ_USER: ${RABBITMQ_USER}
       RABBITMQ_PASS: ${RABBITMQ_PASS}
       RABBITMQ_PORT: ${RABBITMQ_PORT:-5672}
