🐛 Fixed quote's avatar path

--- a/.env.dockerized.example
+++ b/.env.dockerized.example
@@ -4,8 +4,8 @@ SCRAPPER_INTERNAL_PORT=5000 # Container port
 
 # Scrapper settings
 SCRAPPER_EMAIL=<Twitter account email>
-SCRAPPER_USERNAME=<Twitter password>
-SCRAPPER_PASSWORD=<Twitter username>
+SCRAPPER_USERNAME=<Twitter username>
+SCRAPPER_PASSWORD=<Twitter password>
 BROKER_CONCURRENT_MESSAGES=1
 SCRAPPER_LOGIN_PAGE_TIMEOUT=10
 SCRAPPER_LOGIN_ELEMENTS_TIMEOUT=10
@@ -26,4 +26,4 @@ RABBITMQ_PASS=goxcrap_password
 RABBITMQ_PORT=5672
 
 # External APIs URLs
-CORPUS_CREATOR_API_URL=http://ahbcc:4000
+CORPUS_CREATOR_API_URL=http://corpus_creator:4000
