--- a/.env.local.example
+++ b/.env.local.example
@@ -1,15 +1,15 @@
 # Scrapper settings
 EMAIL=<Twitter account email>
-USERNAME=<Twitter password>
-PASSWORD=<Twitter username>
+USERNAME=<Twitter username>
+PASSWORD=<Twitter password>
 LOGIN_PAGE_TIMEOUT=10
 LOGIN_ELEMENTS_TIMEOUT=10
 LOGIN_PASSWORD_TIMEOUT=5
 WAIT_TIME_AFTER_LOGIN=10
 SEARCH_PAGE_TIMEOUT=10
 ARTICLES_TIMEOUT=10
-RATE_LIMITER_PERIOD=900
+RATE_LIMITER_PERIOD=1
 RATE_LIMITER_REQUESTS=50
 
 # External APIs URLs
-CORPUS_CREATOR_API_URL=http://ahbcc:4000
+CORPUS_CREATOR_API_URL=http://corpus_creator:4000
