--- a/compose.yml
+++ b/compose.yml
@@ -20,6 +20,8 @@ services:
       WAIT_TIME_AFTER_LOGIN: ${SCRAPPER_WAIT_TIME_AFTER_LOGIN}
       SEARCH_PAGE_TIMEOUT: ${SCRAPPER_SEARCH_PAGE_TIMEOUT}
       ARTICLES_TIMEOUT: ${SCRAPPER_ARTICLES_TIMEOUT}
+      TWEET_PAGE_TIMEOUT: ${SCRAPPER_TWEET_PAGE_TIMEOUT}
+      TWEET_LONG_TEXT_TIMEOUT: ${SCRAPPER_TWEET_LONG_TEXT_TIMEOUT}
       RATE_LIMITER_PERIOD: ${SCRAPPER_RATE_LIMITER_PERIOD}
       RATE_LIMITER_REQUESTS: ${SCRAPPER_RATE_LIMITER_REQUESTS}
       RABBITMQ_USER: ${RABBITMQ_USER}
