--- a/compose.yml
+++ b/compose.yml
@@ -34,7 +34,7 @@ services:
       rabbitmq:
         condition: service_healthy
     networks:
-      - app
+      - goxcrap_network
       - shared
     restart: on-failure
     healthcheck:
@@ -58,7 +58,7 @@ services:
     volumes:
       - rabbitmq_data:/var/lib/rabbitmq
     networks:
-      - app
+      - goxcrap_network
     healthcheck:
       test: [ "CMD-SHELL", "rabbitmq-diagnostics -q check_running && rabbitmq-diagnostics -q check_local_alarms" ]
       start_period: 1m
@@ -70,7 +70,8 @@ volumes:
   rabbitmq_data:
 
 networks:
-  app:
+  goxcrap_network:
     driver: bridge
+    name: goxcrap_network
   shared:
     external: true
