--- a/Dockerfile_app
+++ b/Dockerfile_app
@@ -1,6 +1,7 @@
 # Build Stage
 FROM golang:1.23.4-alpine AS builder
 
+# Maintainer
 LABEL maintainer="Lucas Belfanti"
 
 # Install necessary dependencies
@@ -32,8 +33,8 @@ COPY internal/ ./internal
 RUN CGO_ENABLED=0 GOOS=linux go build -o /goxcrap ./cmd/api
 
 
-# Final Stage
-FROM alpine:3.21.0 AS final
+# Run Stage
+FROM alpine:3.21.0 AS runner
 
 # Install necessary dependencies
 RUN apk update && apk add --no-cache \
